--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ ftfy==6.1.1
 python-telegram-bot>=20.0a2
 python-dotenv>=0.20.0
 huggingface_hub==0.10.1
+flask[async]
+google_trans_new
+base64
+numpy
