--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,58 @@
+accelerate==0.14.0
+anyio==3.6.2
+APScheduler==3.6.3
+asgiref==3.5.2
+cachetools==4.2.2
+certifi==2022.9.24
+chardet==3.0.4
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
 diffusers==0.7.2
-transformers==4.24.0
-scipy==1.7.3
+filelock==3.8.0
+Flask==2.2.2
 ftfy==6.1.1
-python-telegram-bot>=20.0a2
-python-dotenv>=0.20.0
-huggingface_hub==0.10.1
-flask[async]
-google_trans_new
-base64
-numpy
+google-trans-new==1.1.9
+h11==0.14.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2022.11.1
+httpcore==0.16.2
+httpx==0.23.1
+huggingface-hub==0.10.1
+hyperframe==5.2.0
+idna==2.10
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+numpy==1.23.5
+packaging==21.3
+Pillow==9.3.0
+psutil==5.9.4
+pyparsing==3.0.9
+python-dotenv==0.21.0
+python-telegram-bot==20.0a6
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+regex==2022.10.31
+requests==2.28.1
+rfc3986==1.5.0
+scipy==1.7.3
+six==1.16.0
+sniffio==1.3.0
+tokenizers==0.13.2
+torch==1.13.0+cu116
+torchaudio==0.13.0+cu116
+torchvision==0.14.0+cu116
+tornado==6.1
+tqdm==4.64.1
+transformers==4.24.0
+typing_extensions==4.4.0
+tzdata==2022.6
+tzlocal==4.2
+urllib3==1.26.12
+wcwidth==0.2.5
+Werkzeug==2.2.2
+zipp==3.10.0
